Fix: Corregir carga de recursos para ejecutables empaquetados
- Modificar ManejadorMapaInfinito.java para usar ResourceLoader en lugar de File()
  * Arregla problema de mapa negro en .exe al cargar tiles desde classpath
  * Aplicado a todos los 11 tipos de tiles (agua, arbol, arena, etc.)

- Modificar AcertijosLoader.java para cargar JSON desde classpath
  * Arregla problema de acertijos no cargados en .exe
  * Implementa patrón fallback para compatibilidad desarrollo/producción

- Actualizar .gitignore
  * Excluir carpeta VideoJuego/ generada por jpackage
  * Excluir VideoJuego.jar y archivos temporales de compilación
  * Mantener scripts .bat y documentación .txt en repositorio

- Agregar documentación técnica profesional
  * SOLUCION_PROBLEMA_ASSETS.txt: Detalla análisis y solución del problema
  * COMPILACION_Y_GENERACION_EXE.txt: Documenta proceso de build completo

Archivos modificados:
- domain/ManejadorMapaInfinito.java
- infrastructure/AcertijosLoader.java
- .gitignore

Archivos nuevos:
- SOLUCION_PROBLEMA_ASSETS.txt
- COMPILACION_Y_GENERACION_EXE.txt