@@ -24,12 +24,24 @@ public class AcertijosLoader {
 
     private void cargarAcertijos(String rutaArchivo) {
         try {
-            String contenido = new String(Files.readAllBytes(Paths.get(rutaArchivo)));
+            // Cargar desde classpath (funciona en JAR/EXE)
+            String contenido;
+            var inputStream = getClass().getClassLoader().getResourceAsStream(rutaArchivo);
+
+            if (inputStream != null) {
+                // Cargar desde classpath (JAR/EXE)
+                contenido = new String(inputStream.readAllBytes());
+                inputStream.close();
+            } else {
+                // Fallback: intentar cargar desde file system (desarrollo)
+                contenido = new String(Files.readAllBytes(Paths.get(rutaArchivo)));
+            }
+
             JSONArray jsonArray = new JSONArray(contenido);
 
             for (int i = 0; i < jsonArray.length(); i++) {
                 JSONObject obj = jsonArray.getJSONObject(i);
-                
+
                 int id = obj.getInt("id");
                 String dificultad = obj.getString("dificultad");
                 String pregunta = obj.getString("pregunta");
@@ -40,9 +52,8 @@ public class AcertijosLoader {
                 for (int j = 0; j < respuestasArray.length(); j++) {
                     JSONObject respObj = respuestasArray.getJSONObject(j);
                     respuestas.add(new Respuesta(
-                        respObj.getString("inciso"),
-                        respObj.getString("texto")
-                    ));
+                            respObj.getString("inciso"),
+                            respObj.getString("texto")));
                 }
 
                 acertijos.add(new Acertijo(id, dificultad, pregunta, respuestas, respuestaCorrecta));
@@ -51,6 +62,7 @@ public class AcertijosLoader {
             System.out.println("Acertijos cargados correctamente: " + acertijos.size());
         } catch (IOException e) {
             System.err.println("Error al cargar acertijos: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
